--- a/SparkPi.csproj
+++ b/SparkPi.csproj
@@ -104,8 +104,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Network.cs" />
+    <Compile Include="PiTime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TimeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
