Made SendEmail Async, NOT TESTED

--- a/SparkPi.csproj
+++ b/SparkPi.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Network.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\PiDateTime.cs" />
+    <Compile Include="Utilities\SparkEmail.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
