--- a/SparkPi/SparkPi.csproj
+++ b/SparkPi/SparkPi.csproj
@@ -116,7 +116,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="Blinky_TemporaryKey.pfx" />
+    <None Include="SparkPi_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
