--- a/SparkPi/SparkPi.csproj
+++ b/SparkPi/SparkPi.csproj
@@ -102,6 +102,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controller.cs" />
+    <Compile Include="CycleLights.cs" />
     <Compile Include="SDCardWriterReader.cs" />
     <Compile Include="SparkQueue.cs" />
     <Compile Include="StartPage.xaml.cs">
