--- a/SparkPi/SparkPi.csproj
+++ b/SparkPi/SparkPi.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Network.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\SparkEmail.cs" />
+    <Compile Include="ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
