--- a/SparkPi/SparkPi.csproj
+++ b/SparkPi/SparkPi.csproj
@@ -103,6 +103,8 @@
     </Compile>
     <Compile Include="Controller.cs" />
     <Compile Include="CycleLights.cs" />
+    <Compile Include="Delete.cs" />
+    <Compile Include="PiFaceDigital2.cs" />
     <Compile Include="SDCardWriterReader.cs" />
     <Compile Include="SparkQueue.cs" />
     <Compile Include="StartPage.xaml.cs">
